--- a/index.html
+++ b/index.html
@@ -19,9 +19,29 @@
                     <td id="image"><img src="images/scorpion.png"></td>
                     <td id="nameAndCost">
                         <p>Scorpion</p>
-                        <p><span id="ScorpionCost">15</span> blood</p>
+                        <p><span id="scorpionCost">10</span> blood</p>
                     </td>
-                    <td id="amount"><span id="Scorpion">0</span></td>
+                    <td id="amount"><span id="scorpion">0</span></td>
+                </tr>
+            </table>
+            <table class="valikko unselectable" onclick="buyBaraka()">
+                <tr>
+                    <td id="image"><img src="images/baraka.png"></td>
+                    <td id="nameAndCost">
+                        <p>Baraka</p>
+                        <p><span id="barakaCost">100</span> blood</p>
+                    </td>
+                    <td id="amount"><span id="baraka">0</span></td>
+                </tr>
+            </table>
+            <table class="valikko unselectable" onclick="buyNoobSaibot()">
+                <tr>
+                    <td id="image"><img src="images/noobsaibot.png"></td>
+                    <td id="nameAndCost">
+                        <p>Noob Saibot</p>
+                        <p><span id="noobSaibotCost">1000</span> blood</p>
+                    </td>
+                    <td id="amount"><span id="noobSaibot">0</span></td>
                 </tr>
             </table>
         </div>
